# ocamlbpe

./: dune-project  not_dune
_build/: .db  .digest-db  log
_build/default/: bpe.dune-package  bpe.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: bpe.cma  bpe.cmxa  bpe.cmxs
_build/default/lib/.bpe.objs/byte/: bpe.cmi  bpe.cmo  bpe.cmt
_build/default/lib/.bpe.objs/native/: bpe.cmx
_build/default/lib/.merlin-conf/: lib-bpe
_build/default/lib/ascii/: ascii.ml
_build/default/lib/ascii/.ascii.objs/byte/: ascii.cmi  ascii.cmti
_build/default/lib/ascii/.merlin-conf/: lib-ascii
_build/default/lib/cmd/: cmd.cma  cmd.cmxa  cmd.ml
_build/default/lib/cmd/.cmd.objs/byte/: cmd.cmi  cmd.cmo  cmd.cmt  cmd.cmti
_build/default/lib/cmd/.cmd.objs/native/: cmd.cmx
_build/default/lib/cmd/.merlin-conf/: lib-cmd
_build/default/lib/corpus/: corpus.cma  corpus.cmxa  corpus.mli
_build/default/lib/corpus/.corpus.objs/byte/: corpus.cmi  corpus.cmo  corpus.cmt  corpus.cmti
_build/default/lib/corpus/.merlin-conf/: lib-corpus
_build/default/lib/tuplified_corpus/: tuplified_corpus.cma  tuplified_corpus.cmxa  tuplified_corpus.ml
_build/default/lib/tuplified_corpus/.merlin-conf/: lib-tuplified_corpus
_build/default/test/.merlin-conf/: exe-test_bpe
_build/default/test/.test_bpe.eobjs/byte/: dune__exe__Test_bpe.cmi  dune__exe__Test_bpe.cmti
_build/default/test/.test_bpe.eobjs/native/: dune__exe__Test_bpe.cmx
lib/ascii/: ascii.mli  dune
lib/cmd/: cmd.ml  cmd.mli  dune
lib/corpus/: corpus.ml  dune
lib/tuplified_corpus/: dune
(+6 files in other folders)
