(lang dune 3.18)

(name bpe)

(generate_opam_files true)

(source
 (github eachra-bawn/ocamlbpe))

(authors "Oisín Mulhall <mulhalloisin@gmail.com>")

(maintainers "Oisín Mulhall <mulhalloisin@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bpe)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
